Add Readme with VM Options