@@ -1,2 +1,10 @@
 # MTGhost
 Dies ist eine Software um Magic the Gathering Turniere zu hosten.
+
+Um sie auf einem Mac zu starten müssen noch folgende Parameter eingegeben werden:
+- openjdk24
+- VM Options:
+  
+--module-path /Users/simonwiedmer/java/javafx-sdk-24.0.1/lib
+
+--add-modules javafx.controls,javafx.fxml,javafx.graphics
